# ratatodo

./: Cargo.toml  README.md
src/: action.rs  app.rs  dispatcher.rs  event.rs  handler.rs  main.rs  state.rs  tui.rs  ui.rs
src/models/: models.rs
src/services/: cache.rs
src/widgets/: mod.rs  statusbar.rs  textarea.rs  todo_entry_listview.rs  todo_entry_textarea.rs
