[package]
name = "ratatodo"
version = "0.1.0"
authors = ["sheepla <62412884+sheepla@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
eyre = "0.6.12"
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.40.0", features = ["full"] }
tui-textarea = "0.7.0"
